--- a/mi_pagina_personal.html
+++ b/mi_pagina_personal.html
@@ -18,6 +18,11 @@
         <img src="./IMAGENES/Imagen de WhatsApp 2024-05-21 a las 19.23.34_fc028b14.jpg" 
         alt="Ocurrio un error al cargar la imagen" height="400" width="550"
         class="imagen-con-bordes-redondeados">
+
+        <h2 class="Subtitulo">Practicas</h2>
+        <ol>
+            <li><a href="./PRACTICAS/CALCULADORA/calculadora.html">Calculadora</a></li>
+        </ol>
         
         <h2 class="Subtitulo">Mis Hobbies</h2>
         <ol>
