--- a/Practicas/Calculadora/index.html
+++ b/Practicas/Calculadora/index.html
@@ -17,7 +17,7 @@
         <button class="boton" onclick="restar()">RESTAR</button>
         <button class="boton" onclick="multiplicar()">MULTIPLICAR</button>
         <button class="boton" onclick="division()">DIVIDIR</button>
-        <h3 class="subtitulo">Resultado</h3>
+        <h3 class="subtitulo">RESULTADO : </h3>
         <h3 class="subtitulo" id="res"></h3>
     </div>
     <script src="./main.js"></script>
