--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
         alt="Ocurrio un error al cargar la imagen" height="400" width="550"
         class="imagen-con-bordes-redondeados">
 
+        <button type="button" onclick="capturar()">Capturar</button>
+        <button type="button" onclick="mostrar()">Mostrar</button>
+
         <h2 class="Subtitulo">Practicas</h2>
         <ol>
             <li><a href="./Practicas/Calculadora/index.html">Calculadora</a></li>
+            <li><a target="_self" href="./Practicas/Registro/index.html">Validaciones</a></li>
         </ol>
         
         <h2 class="Subtitulo">Mis Hobbies</h2>
